# helveg

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Directory.Build.props  GitVersionFallback.cs  Helveg.sln  Helveg.sln.sln  LICENSE  NuGet.config  README.ad  README.md  build.md  build.ps1  build.sh  codepizza.md  helveg-data.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.ad  runrd.sh  turbo.json
.config/: dotnet-tools.json
ash/: README.md  deno.json  explorer-state.ts  global.ts  mod.ts  operation.ts  options.ts  package.json  tsconfig.json
ash/components/: AppearancePanel.svelte  DocumentPanel.svelte  Explorer.svelte  GuidePanel.svelte  Hint.svelte  Icon.svelte  LayoutPanel.svelte  LoadingScreen.svelte  PropertiesPanel.svelte  SearchPanel.svelte  Subpanel.svelte  Toast.svelte  ToolsPanel.svelte  Tooltip.svelte
ash/csharp/: model.ts  style.ts
ash/diagram/: diagram.ts  initializers.ts
ash/eng/: build.ts  inline-bundle.ts  pack-icons.ts
ash/layout/: forceAltas2Supervisor.ts  forceAtlas2Messages.ts  forceAtlas2Worker.ts  tidyTree.ts
ash/model/: const.ts  data-model.ts  data.ts  filter.ts  graph.ts  icon-set-model.ts  icons.ts  style.ts  traversal.ts
ash/rendering/: iconAtlas.ts  node.diff.ts  node.pictogram.ts  pizza.ts
ash/styles/: _diagram-background.scss  _diagram.scss  _hint.scss  _panel.scss  _variables.scss  _vsicon.scss
cmake/: Dotnet.cmake  Embed.cmake  FindGLFW.cmake  FindGlm.cmake  FindGlslang.cmake  FindVolk.cmake  FindVulkanHeaders.cmake  embed.cpp
devlog/: index.md
docker/: Dockerfile
docker/linux/: Dockerfile
docker/windows/: Dockerfile
docker/windows-test/: Dockerfile
docs/: architecture.ad  build.ad  codepizza.md  design.md  devlog.md  solved.ad
eng/JsonSchemaGenerator/: Helveg.Engineering.JsonSchemaGenerator.csproj  Program.cs
eng/Roslyn/: Helveg.Engineering.Roslyn.csproj  JsonSchemaSourceGenerator.cs
experiments/solid/: README.md  deno.json  import_map.json
helveg/: .gitignore  Analyse.cs  Analyze.cs  Block.cs  BlockFlags.cs  BlockKind.cs  CMakeLists.txt  Chunk.cs  DebugDraw.cs  DebugGraph.cs  Fdg.cs  Graph.cs  GraphRender.cs  Helveg.csproj  ISeedable.cs  InteropGraph.cs  Makefile  Mesh.cs  OpenSimplexNoise.cs  Palette.cs  Program.cs  Spruce.cs  StrideProgram.cs  Vku.cs  World.cs  hello.cpp  mesh_render.cpp  vki.hpp
helveg/Analysis/: Analyze.cs  AnalyzedMember.cs  AnalyzedProject.cs  AnalyzedSolution.cs  AnalyzedType.cs  AnalyzedTypeGraph.cs  AnalyzedTypeId.cs  AnalyzedTypeKind.cs  AnalyzedTypeKindExtensions.cs  Diagnosis.cs  DiagnosisExtensions.cs  NuGetLocator.cs  ReferenceCountingAnalyzer.cs  ReferenceCountingWalker.cs  RoslynExtensions.cs
helveg/Landscape/: Bridge.cs  Cargo.cs  Colors.cs  Colours.cs  ConstructionSite.cs  Eades.cs  FR.cs  Fdg.cs  Graph.cs  Heightmap.cs  ISeedable.cs  LDraw.cs  LRule.cs  LSymbol.cs  LSystem.cs  LTurtle.cs  LTurtleState.cs  LogCabin.cs  Meadow.cs  OpenSimplexNoise.cs  Signpost.cs  Spruce.cs  Square.cs  Terrain.cs  Tree.cs  WorldBuilder.cs
helveg/Render/: Block.cs  BlockFlags.cs  Chunk.cs  Graph.cs  GraphRender.cs  InteropGraph.cs  Palette.cs  Point3.cs  Vku.cs  World.cs
helveg/Serialization/: SerializableGraph.cs  SerializableMember.cs  SerializableProject.cs  SerializableSolution.cs  SerializableType.cs  Serialize.cs  SerializedProject.cs
helveg/cmake/: Embed.cmake  FindVolk.cmake
helveg/vku/: app.hpp  base.hpp  descriptor_set.cpp  descriptor_set.hpp  device_related.cpp  instance_related.hpp  render_pass.cpp  standalone.cpp
learning-vkinterop/: .clang-format  CMakeLists.txt  Mesh.cs  Program.cs  VkInterop.csproj  app.hpp  embed.cpp  ext.cpp  ext.hpp  mesh_render.cpp  mesh_render.hpp  sample.cpp  sample.hpp  shaders.hpp  triangle.cpp  triangle.hpp  vki.cpp  vki.hpp  vkinterop.cpp  vkinterop.hpp  wrapper.cpp  wrapper.hpp
learning-vkinterop/cmake/: FindGlm.cmake
learning-vkinterop/shaders/: mesh.vert  triangle.vert
learning-vkinterop/vku/: CMakeLists.txt  app.cpp  app.hpp  base.cpp  base.hpp  capabilities.cpp  capabilities.hpp  command_pool.cpp  command_pool.hpp  containers.cpp  containers.hpp  debug_messenger.cpp  debug_messenger.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  device_objects.cpp  device_objects.hpp  device_related.cpp  device_related.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  instance_related.cpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  standalone.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  swapchain_env.cpp  (+5 more)
sample/clean/: Program.cs
sample/dirty/: Helveg.Sample.csproj
sample/mvc/: sample-mvc.sln
samples/Diagnostics/: Helveg.Sample.Diagnostics.csproj  Program.cs  Work.cs
samples/Docfx/: docfx.json  index.md  toc.yml
samples/DocfxTemplate/: Helveg.Samples.DocfxTemplate.csproj
samples/Factory/: Program.cs  Work.cs
samples/Glyphs/: Access.cs  BeachBall.cs  Delegate.cs  Fire.cs  Members.cs  PokerChip.cs  Smoke.cs  Vinyl.cs
schema/: data.json  icon-set.json
src/: Directory.Build.props  Glsl.cs  Helveg.csproj  Helveg.sln  tsconfig.json
src/Common/: Const.cs  (+31 more)
vku/: CMakeLists.txt  app.cpp  app.hpp  base.cpp  base.hpp  camera_core.cpp  camera_core.hpp  chunk_render.cpp  chunk_render.hpp  containers.cpp  containers.hpp  cores.hpp  data.hpp  depth_core.cpp  depth_core.hpp  descriptor_set.cpp  descriptor_set.hpp  device_related.cpp  device_related.hpp  display_core.cpp  display_core.hpp  graph_render.cpp  graph_render.hpp  hello.cpp  inline_cube.cpp  inline_mesh_core.cpp  inline_mesh_core.hpp  instance_core.cpp  instance_core.hpp  instance_related.cpp  instance_related.hpp  interop.cpp  interop.hpp  log.cpp  log.hpp  mesh_core.cpp  mesh_core.hpp  mesh_render.cpp  mesh_render.hpp  pipeline.cpp  (+29 more)
vku/shaders/: chunk.vert  edge.frag  fire.comp  fire.geom  fire.vert  graph.frag  graph.geom  graph.vert  mesh.frag  mesh.vert  node.frag  node.geom  node.vert  raytrace.rchit  raytrace.rgen  raytrace.rmiss  text.frag  text.vert  world.frag  world.vert
(+589 files in other folders)
